--- a/projects/incubating/external-secrets-operator.yaml
+++ b/projects/incubating/external-secrets-operator.yaml
@@ -3,74 +3,72 @@ kind: Project
 # NOTE: Remove lines that are not applicable
 metadata:
   # Sandbox: Name of the product to be evaluated
-  name: ""
+  name: "External Secrets Operator"
 
   # Sandbox: Product vendor (opensource if no vendor)
-  vendor: ""
+  vendor: "opensource"
 
   # Sandbox: Short description of the product
-  description: ""
+  description: "External Secrets Operator provides users with the capability to use different external secret stores and generate those secrets on Kubernetes clusters"
 
   # Sandbox: URL(s) to product website for further information
   website:
-  - ""
+  - "https://external-secrets.io/"
 
   # Sandbox: product source code repositories (e.g. github.com).  If not opensource, put "Proprietary"
   sourceCode:
-  - ""
+  - "https://github.com/external-secrets/external-secrets"
 
   # Sandbox: Product licenses (e.g. Apache 2.0, GPL 3.0, MIT, Proprietary).  Include both free and paid tiers if they exist.
   license:
-  - ""
+  - "Apache License 2.0"
 
   # Maturity level of the package
-  maturityLevel: Sandbox # Sandbox, Incubating, or Graduated
+  maturityLevel: Incubating # Sandbox, Incubating, or Graduated
 
   # Maintenance Track of the package
-  maintenanceTrack: CommunityMaintained # BigBangIntegrated, BigBangMaintained, CommunityMaintained
+  maintenanceTrack: BigBangIntegrated # BigBangIntegrated, BigBangMaintained, CommunityMaintained
 
-  # Sandbox: Points of contact for project (at least 2)
   contacts:
-  - name: ""
-    repo1user: ""
-  - name: ""
-    repo1user: ""
+  # Sandbox: Points of contact for project (at least 2)
+  - name: Jacob Kershaw
+    repo1user: "@kershaw.jacob"
+  - name: Andrew Kesterson
+    repo1user: "@akesterson"
+  - name: Daniel Chen
+    repo1user: "@dchen"
 
 spec:
   # Sandbox: Package(s) contained in the product (e.g. operator and application).  Each package will have its own repository in repo1.
   packages:
     # Sandbox: Name of the package
-  - name: ""
+  - name: "external-secrets"
 
     # Sandbox: Big Bang repository (i.e. https://repo1.dso.mil/platform-one/big-bang/apps/sandbox/<your project>)
-    repository: ""
+    repository: "https://repo1.dso.mil/big-bang/apps/sandbox/external-secrets"
 
     # Incubating: List of images contained in the package.
     images:
       # Incubating: Name of the image
-      - name: ""
-
-        # Incubating: Iron Bank approval request (https://repo1.dso.mil/dsop/<your project>/-/issues/1)
-        repository: ""
-
-        # Graduated: Iron Bank approval URL (https://ironbank.dso.mil/repomap/details;registry1Path=<your project path>)
-        approval: ""
+      - name: external-secrets
+        repository: registry1.dso.mil/ironbank/opensource/external-secrets/external-secrets
+        approval: https://ironbank.dso.mil/repomap/details;registry1Path=opensource%2Fexternal-secrets%2Fexternal-secrets
 
     # Graduated: Links to required documentation
+    # Package Architecture Documentation is WIP - https://repo1.dso.mil/big-bang/universe/product/external-secrets/-/issues/24
     documentation: []
-    # - (MISSING) https://repo1.dso.mil/platform-one/big-bang/bigbang/-/blob/master/docs/understanding-bigbang/package-architecture/
-    # - (MISSING) https://repo1.dso.mil/platform-one/big-bang/bigbang/-/blob/master/docs/packages.md#core
-    # - (MISSING) https://repo1.dso.mil/platform-one/big-bang/bigbang/-/blob/master/docs/understanding-bigbang/licensing-model.md
-    # - (MISSING) https://repo1.dso.mil/platform-one/big-bang/bigbang/-/blob/master/docs/prerequisites/minimum-hardware-requirements.md
+
 
   # Name and date of required verifications (e.g. "John Doe, 7 Dec 2021")
   signOffs:
 
     # Sandbox: Verification of requirements
-    sandboxVerification: ""
+    sandboxVerification: Christopher O'Connell, 24 June 2024
 
     # Incubating: Verification of requirements
-    incubatingVerification: ""
+    incubatingVerification: Christopher O'Connell, 16 July 2024
 
     # Graduated: Verification of requirements
     graduatedVerification: ""
+
+
