--- a/projects/graduated/metrics-server.yaml
+++ b/projects/graduated/metrics-server.yaml
@@ -26,6 +26,9 @@ metadata:
   # Maturity level of the package
   maturityLevel: Incubating # Sandbox, Incubating, or Graduated
 
+  # Maintenance Track of the package
+  maintenanceTrack: BigBangIntegrated # BigBangIntegrated, BigBangMaintained, CommunityMaintained
+
   # Sandbox: Points of contact for project (at least 2)
   contacts:
   - name: Brandt Keller
