--- a/projects/graduated/neuvector.yaml
+++ b/projects/graduated/neuvector.yaml
@@ -28,7 +28,10 @@ metadata:
   purpose: "Open Source Runtime Security"
 
   # Maturity level of the package
-  maturityLevel: Incubating # Sandbox, Incubating, or Graduated
+  maturityLevel: Graduated # Sandbox, Incubating, or Graduated
+
+  # Maintenance Track of the package
+  maintenanceTrack: BigBangIntegrated # BigBangIntegrated, BigBangMaintained, CommunityMaintained
 
   # Sandbox: Points of contact for project (at least 2)
   contacts:
