--- a/projects/sandbox/launchboard.yaml
+++ b/projects/sandbox/launchboard.yaml
@@ -28,6 +28,9 @@ metadata:
   # Maturity level of the package
   maturityLevel: Sandbox # Sandbox, Incubating, or Graduated
 
+  # Maintenance Track of the package
+  maintenanceTrack: CommunityMaintained # BigBangIntegrated, BigBangMaintained, CommunityMaintained
+
   # Sandbox: Points of contact for project (at least 2)
   contacts:
   - name: Graham Smith
