--- a/projects/sandbox/sdelements.yaml
+++ b/projects/sandbox/sdelements.yaml
@@ -3,69 +3,76 @@ kind: Project
 # NOTE: Remove lines that are not applicable
 metadata:
   # Sandbox: Name of the product to be evaluated
-  name: "External Secrets Operator"
+  name: "SDElements"
 
   # Sandbox: Product vendor (opensource if no vendor)
-  vendor: "opensource"
+  vendor: "Security Compass"
 
   # Sandbox: Short description of the product
-  description: "External Secrets Operator provides users with the capability to use different external secret stores and generate those secrets on Kubernetes clusters"
+  description: "Risk assessment, threat modeling and secure coding platform"
 
   # Sandbox: URL(s) to product website for further information
   website:
-  - "https://external-secrets.io/"
+  - "https://www.securitycompass.com/sdelements/"
 
   # Sandbox: product source code repositories (e.g. github.com).  If not opensource, put "Proprietary"
   sourceCode:
-  - "https://github.com/external-secrets/external-secrets"
+  - "Proprietary"
 
   # Sandbox: Product licenses (e.g. Apache 2.0, GPL 3.0, MIT, Proprietary).  Include both free and paid tiers if they exist.
   license:
-  - "Apache License 2.0"
+  - "Proprietary"
 
   # Maturity level of the package
-  maturityLevel: Incubating # Sandbox, Incubating, or Graduated
+  maturityLevel: Sandbox # Sandbox, Incubating, or Graduated
 
-  contacts:
+  # Maintenance Track of the package
+  maintenanceTrack: CommunityMaintained # BigBangIntegrated, BigBangMaintained, CommunityMaintained
+
   # Sandbox: Points of contact for project (at least 2)
-  - name: Jacob Kershaw
-    repo1user: "@kershaw.jacob"
-  - name: Andrew Kesterson
-    repo1user: "@akesterson"
-  - name: Daniel Chen
-    repo1user: "@dchen"
+  contacts:
+  - name: "Hrdayesh Patel"
+    repo1user: "hpatel"
+  - name: "Matthew Chum"
+    repo1user: "mchum"
+  - name: "Adam Gilbert"
+    repo1user: "agilbert"
+  - name: "Kevinkumar Patel"
+    repo1user: "kevinptl4"
+  - name: "Allen Ji"
+    username: "Ji"
 
 spec:
   # Sandbox: Package(s) contained in the product (e.g. operator and application).  Each package will have its own repository in repo1.
   packages:
     # Sandbox: Name of the package
-  - name: "external-secrets"
+  - name: "sdelements"
 
     # Sandbox: Big Bang repository (i.e. https://repo1.dso.mil/platform-one/big-bang/apps/sandbox/<your project>)
-    repository: "https://repo1.dso.mil/big-bang/apps/sandbox/external-secrets"
+    repository: "https://repo1.dso.mil/platform-one/big-bang/apps/sandbox/sdelements"
 
     # Incubating: List of images contained in the package.
     images:
       # Incubating: Name of the image
-      - name: external-secrets
-        repository: registry1.dso.mil/ironbank/opensource/external-secrets/external-secrets
-        approval: https://ironbank.dso.mil/repomap/details;registry1Path=opensource%2Fexternal-secrets%2Fexternal-secrets
+      - name: ""
+
+        # Incubating: Iron Bank approval request (https://repo1.dso.mil/dsop/<your project>/-/issues/1)
+        repository: ""
+
+        # Graduated: Iron Bank approval URL (https://ironbank.dso.mil/repomap/details;registry1Path=<your project path>)
+        approval: ""
 
     # Graduated: Links to required documentation
-    # Package Architecture Documentation is WIP - https://repo1.dso.mil/big-bang/universe/product/external-secrets/-/issues/24
     documentation: []
-
 
   # Name and date of required verifications (e.g. "John Doe, 7 Dec 2021")
   signOffs:
 
     # Sandbox: Verification of requirements
-    sandboxVerification: Christopher O'Connell, 24 June 2024
+    sandboxVerification: "Ian Dunbar-Hall, 15 Dec 2022"
 
     # Incubating: Verification of requirements
-    incubatingVerification: Christopher O'Connell, 16 July 2024
+    incubatingVerification: ""
 
     # Graduated: Verification of requirements
     graduatedVerification: ""
-
-
