--- a/projects/sandbox/tetragon.yaml
+++ b/projects/sandbox/tetragon.yaml
@@ -26,6 +26,9 @@ metadata:
   # Maturity level of the package
   maturityLevel: Sandbox # Sandbox, Incubating, or Graduated
 
+  # Maintenance Track of the package
+  maintenanceTrack: BigBangIntegrated # BigBangIntegrated, BigBangMaintained, CommunityMaintained
+
   contacts:
   # Sandbox: Points of contact for project (at least 2)
   - name: Dax McDonald
