--- a/projects/sandbox/istiooscalcontroller.yaml
+++ b/projects/sandbox/istiooscalcontroller.yaml
@@ -27,12 +27,15 @@ metadata:
   # Maturity level of the package
   maturityLevel: Sandbox # Sandbox, Incubating, or Graduated
 
+  # Maintenance Track of the package
+  maintenanceTrack: BigBangMaintained # BigBangIntegrated, BigBangMaintained, CommunityMaintained
+
   # Sandbox: Points of contact for project (at least 2)
   contacts:
   - name: "Andrew Shoell"
-    repo1user: @andrewshoell 
+    repo1user: @andrewshoell
   - name: "Chris O'Connell"
-    repo1user: @chris.oconnell 
+    repo1user: @chris.oconnell
 
 spec:
   # Sandbox: Package(s) contained in the product (e.g. operator and application). Each package will have its own repository in repo1.
