--- a/projects/incubating/mimir.yaml
+++ b/projects/incubating/mimir.yaml
@@ -24,7 +24,7 @@ metadata:
   - GNU Affero GPL 3.0
 
   # Maturity level of the package
-  maturityLevel: Sandbox # Sandbox, Incubating, or Graduated
+  maturityLevel: Incubating # Sandbox, Incubating, or Graduated
 
   # Maintenance Track of the package
   maintenanceTrack: BigBangIntegrated # BigBangIntegrated, BigBangMaintained, CommunityMaintained
@@ -33,7 +33,7 @@ metadata:
   contacts:
   - name: Kevin Scheunemann
     repo1user: '@kscheunemann'
-  - name: Krby Liu
+  - name: Kirby Liu
     repo1user: '@kliu'
   - name: Zach Callahan
     repo1user: '@zcallahan'
@@ -44,8 +44,8 @@ spec:
     # Sandbox: Name of the package
   - name: Mimir
 
-    # Sandbox: Big Bang repository (i.e. https://repo.dso.mil/platform-one/big-bang/apps/sandbox/<your project>)
-    repository: https://repo1.dso.mil/big-bang/apps/sandbox/mimir
+    # Sandbox: Big Bang repository (i.e. https://repo.dso.mil/big-bang/apps/sandbox/<your project>)
+    repository: https://repo1.dso.mil/big-bang/product/packages/mimir
 
     # Incubating: List of images contained in the package.
     images:
@@ -58,19 +58,19 @@ spec:
 
     # Graduated: Links to required documentation
     documentation:
-    # - (MISSING) https://repo1.dso.mil/platform-one/big-bang/bigbang/-/blob/master/docs/understanding-bigbang/package-architecture/
-    - https://repo1.dso.mil/platform-one/big-bang/bigbang/-/blob/master/docs/packages.md#core
-    # - (MISSING) https://repo1.dso.mil/platform-one/big-bang/bigbang/-/blob/master/docs/understanding-bigbang/licensing-model.md
-    # - (MISSING) https://repo1.dso.mil/platform-one/big-bang/bigbang/-/blob/master/docs/prerequisites/minimum-hardware-requirements.md
+    - https://repo1.dso.mil/big-bang/bigbang/-/blob/master/docs/understanding-bigbang/package-architecture/mimir.md
+    - https://repo1.dso.mil/big-bang/bigbang/-/blob/master/docs/packages.md#cluster-utilities
+    # - (MISSING) https://repo1.dso.mil/big-bang/bigbang/-/blob/master/docs/understanding-bigbang/licensing-model.md
+    # - (MISSING) https://repo1.dso.mil/big-bang/bigbang/-/blob/master/docs/prerequisites/minimum-hardware-requirements.md
 
   # Name and date of required verifications (e.g. "John Doe, 7 Dec 2021")
   signOffs:
 
     # Sandbox: Verification of requirements
-    sandboxVerification: ""
+    sandboxVerification: Chris O'Connell, 28 Jan 2024
 
     # Incubating: Verification of requirements
-    incubatingVerification: ""
+    incubatingVerification: Chris O'Connell, 28 Jan 2024
 
     # Graduated: Verification of requirements
     graduatedVerification: ""
