removing old codeowners

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,5 +1,5 @@
 # CODEOWNERS
-* @ryan.thompson.44 @barakstout1 @anthony.butt @idunbarh @camdon.cady @mclamb
+* @marknelson @sarah.cho @chris1
 
 # Meetings, Agenda, Minutes are owned by the current TOC Chair(s)
-/meetings/ @camdon.cady @mclamb
+/meetings/ 
